my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EAPPLY/T_EAPPLY-protos.c.tmp

/* generated function prototypes */
static attr_value_t get_runtest(conf_object_t *_obj, lang_void *_aux) UNUSED;
static conf_object_t *
test_alloc(conf_class_t *cls) UNUSED;
static lang_void *
test_init(conf_object_t *_obj) UNUSED;
static void test_finalize(conf_object_t *_obj) UNUSED;
static void test_objects_finalized(conf_object_t *_obj) UNUSED;
static void test_pre_delete(conf_object_t *_subscriber, conf_object_t *_obj, lang_void *_data) UNUSED;
static void test_deinit(conf_object_t *_obj) UNUSED;
static void test_dealloc(conf_object_t *dev) UNUSED;
static event_class_t *_send_now_evclass_2 UNUSED;
static void  _DML_EV_e__callback(conf_object_t *_obj, void  *param) UNUSED;
static void  _DML_EV_e__destroy(conf_object_t *_obj, void  *data) UNUSED;
static attr_value_t _DML_EV_e__get_event_info(conf_object_t *_obj, void  *data) UNUSED;
static void  *_DML_EV_e__set_event_info(conf_object_t *_obj, attr_value_t info) UNUSED;
static char *_DML_EV_e__describe_event(conf_object_t *_obj, void  *data) UNUSED;
static const _id_info_t _id_infos[3] UNUSED;
static ht_str_table_t _id_info_ht UNUSED;
static void * const _object_vtables[3] UNUSED;
static conf_class_t *_dev_class UNUSED;
static void _startup_calls(void) UNUSED;
static void _init_data_objs(test_t *_dev) UNUSED;
static bool _DML_M_init(test_t *_dev) UNUSED;
static bool _DML_M_e__set_event_info(test_t *_dev, attr_value_t info, void  **data) UNUSED;
static bool _DML_M_e__get_event_info(test_t *_dev, void  *data, attr_value_t *info) UNUSED;
static bool _DML_M_e__destroy(test_t *_dev, void  *data) UNUSED;
static bool _DML_M_e__describe_event(test_t *_dev, void  *data, char **description) UNUSED;
static bool _DML_M_e__callback(test_t *_dev, void  *param) UNUSED;
static bool _DML_M_soft_reset(test_t *_dev) UNUSED;
static bool _DML_M_hard_reset(test_t *_dev) UNUSED;
static void _initialize_vtable_hts(void) UNUSED;
static struct _object _tr__dev__object UNUSED;
static struct _object _tr_e__object UNUSED;
static struct _object _tr_runtest__object UNUSED;
static void __attribute__((optimize("O0"))) _initialize_traits(void) UNUSED;
static const _vtable_list_t *const _each__object UNUSED;
static ht_str_table_t _typeseq_after_on_hook_hts[0] UNUSED;
static void _initialize_typeseq_after_on_hook_hts(void) UNUSED;
static attr_value_t _simple_event_only_domains_get_value(conf_object_t *_obj, lang_void *data) UNUSED;
static lang_void *_simple_event_only_domains_set_value(conf_object_t *_obj, attr_value_t val) UNUSED;
static void _cancel_simple_delay_events(conf_object_t *_obj, conf_object_t *_clock, const _identity_t *_domain) UNUSED;
static void _cancel_simple_events(conf_object_t *_obj, _identity_t _domain) UNUSED;
static void _initialize_identity_ht(void) UNUSED;
static void _register_events(conf_class_t *class) UNUSED;
static void _init_port_objs(test_t *_dev) UNUSED;
static void _init_static_vars(test_t *_dev) UNUSED;
